Forum, version chooser: avoid break of description on mobile

--- a/inyoka_theme_ubuntuusers/static/style/forum.less
+++ b/inyoka_theme_ubuntuusers/static/style/forum.less
@@ -608,15 +608,12 @@ tr.unstable {
     font-size: 0.9em;
   }
 }
-p.version_chooser {
-  padding-left: 22px;
-  margin-left: 22px;
-}
 span#version_info.unstable,
 span#version_info.lts,
 span#version_info.current {
   padding: 5px 10px 5px 10px;
   .rounded(5px);
+  display: inline-block;
 }
 span#version_info.unstable {
   color: #fff;
